fix topnav alignment, some universal padding tweaks

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -52,3 +52,7 @@
 .dnone {
 	display: none !important;
 }
+.textwrapper {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
